--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "eslint . && prettier . --check",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "checks": "eslint . && prettier . --check",
     "format": "prettier . --write",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack serve --config webpack.dev.js",
@@ -20,6 +21,7 @@
     "globals": "^15.14.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
