--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "your-project-name",
   "version": "1.0.0",
   "main": "index.js",
+  "jest": {
+    "transform": {}
+  },
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "checks": "eslint . && prettier . --check",
